Pass keyword arguments to IOs properly [Bug #16639]

(cherry picked from commit 041c2932e336b509b0ddc1fdbd9f160bce8d4893)